Actions
Bug #10381
closedaac: NULL pointer errors
Start date:
2019-02-11
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build error with NULL pointer:
../../common/io/aac/aac.c: In function 'aac_free_comm_space': ../../common/io/aac/aac.c:3665:28: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] softs->comm_space_phyaddr = NULL; ^ cc1: all warnings being treated as errors
Updated by Electric Monk over 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 48e2f2836abbe41b87fc711b76d475c5c6223cbc
commit 48e2f2836abbe41b87fc711b76d475c5c6223cbc Author: Toomas Soome <tsoome@me.com> Date: 2019-02-15T18:56:43.000Z 10381 aac: NULL pointer errors Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Robert Mustacchi <rm@joyent.com>
Actions